# slmops_infra

./: .gitignore  README.md  Taskfile.yml  provision.code-workspace  pyproject.toml
cloud/: Makefile  readme.md  todo.md
cloud/manifests/: lakefs.yaml  mlflow.yml  postrgres.yaml  zenml.yml
cloud/manifests/mlflow/: README.md
cloud/manifests/zenml/: values.yaml
cloud/tasks/: T.yml  Taskfile.yml
cloud/tasks/iac/: Taskfile.yml
cloud/tasks/k8s/: Taskfile.yml
cloud/terraform/: versions.tf
cloud/terraform/init/: instances.yaml
local/: Chart.yaml  Makefile  README.md  Taskfile.yml  k3d-lmops.yaml  k3d-test.yaml  zenml.yml
local-infra/: Makefile  zenml.yml
local/manifests/: dremio.yaml  ing.yaml  lakefs.yaml  mlflow.yml  postrgres.yaml  zenml.yml
local/tasks/: Taskfile.yml
terraform/: versions.tf
terraform/init/: backend.storage.tf  terraform.tfvars
zen/: Makefile  README.md  hello.py  pyproject.toml  sample_zenml_req.txt
zen/notebooks/: dask.ipynb  gcs.ipynb  mlflow.ipynb  nessie.yaml  ray.ipynb  test.ipynb
zen/notebooks/mlrun/: features.csv  my_auth_config.ini  test_mlflow.py  test_mlflow_connection.ipynb
zen/zenml/: requirements.txt  run.py
zen/zenml/configs/: data_ingestion_config.yaml
zen/zenml/materializers/: dask_materializer.py
zen/zenml/pipelines/: config.py  data_ingestion.py
zen/zenml/steps/: data_ingestion.py  data_storage.py
zen/zenml/utils/: storage.py
zen/zenml_starter/: access.yaml  access_default.yaml  mlflow_starter.py  mlflow_starter_sky.py  random_df_pipeline.py  random_df_piplien_sky.py  test.yaml  test_zenml.yaml
(+87 files in other folders)
