[project]
name = "zen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dask-kubernetes>=2023.3.2",
    "dask[complete]>=2023.5.0",
    "datasets>=3.1.0",
    "google-cloud-storage>=2.19.0",
    "mlflow>=2.19.0",
    "pyiceberg>=0.7.1",
    "pynessie>=0.67.0",
    "skypilot==0.6.1",
    "uv>=0.5.18",
    "zenml[connectors-gcp]==0.71.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5"]
